Set fixed width and height for radio buttons to fix shifting

--- a/src/App.css
+++ b/src/App.css
@@ -155,13 +155,18 @@ label {
   display: inline-block;
   text-align: center;
   padding: 0.25em 1em;
+  width: 150px;
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 8px;
   border: 0.8px solid #4D5B9E;
   font-size: .9rem;
 }
 
 input[type="radio"]:checked+label {
-  border-radius: 7.942px;
+  border-radius: 7.9px;
   background: #D6DBF5;
   color: #293264;
   text-align: center;
